bad/assign_field_int_mcall_array.example_compiler_output
ERROR
[1mbad/assign_field_int_mcall_array.lat:10:20: [1;31merror: [0;1massigning to `int` from incompatible type `int[]`[m
	(new M).foo().fld = new int[3];
	                  [1;32m^[m
